+ bootstrap x cross-selling

--- a/style.css
+++ b/style.css
@@ -21,6 +21,11 @@ header li, a {
   font-weight: bold;
 }
 
+#menu a {
+  color: #556D0F;
+
+}
+
 #menu {
   display: flex;
   justify-content: space-around;
@@ -69,26 +74,6 @@ header li, a {
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
   background-color: rgba(0,0,0,0.8);
-}
-
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
 }
 
 /* The dots/bullets/indicators */
@@ -164,10 +149,33 @@ div.formulaire {
   font-size: 16px;
   background-color: #556D0F;
 }
+
+.btn-primary {
+  background-color: #556D0F !important;
+  border-radius: 0 !important;
+  border: none !important;
+  padding: 15px !important;
+  margin: 30px !important;
+}
+
+a.btn-primary {
+  display: block;
+  margin: auto;
+}
+
+.thumbnail h3 {
+  text-align: center;
+}
+
+.thumbnail a>img, .thumbnail>img {
+  padding: 50px;
+}
 /** fin fiche produit **/
 /** début footer **/
 footer {
   height: 200px;
+  display: flex;
+  justify-content: space-around;
 }
 
 footer li {
