--- a/style.css
+++ b/style.css
@@ -170,6 +170,39 @@ a.btn-primary {
 .thumbnail a>img, .thumbnail>img {
   padding: 50px;
 }
+
+/* hover */
+.thumbnail {
+    position: relative;
+}
+
+img {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+.caption {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%)
+}
+
+.thumbnail:hover img {
+  opacity: 0.3;
+}
+
+.thumbnail:hover .caption {
+  opacity: 1;
+}
+
 /** fin fiche produit **/
 /** début footer **/
 footer {
