modif page portfolio

--- a/style.css
+++ b/style.css
@@ -144,6 +144,11 @@ div.description {
   background-color: #556D0F;
 }
 
+.maybe p {
+  padding: 60px;
+  font-size: 20px;
+}
+
 .btn-primary {
   background-color: #556D0F !important;
   border-radius: 0 !important;
@@ -227,3 +232,5 @@ footer input::placeholder {
   color: #E90649;
   width: 282px;
 }
+/** fin footer **/
+/** début portfolio **/
